--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,30 @@
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyA3nzx6fUisUWMk10MvJXm6a_ci7Gl4myw",
+      authDomain: "soccer-7898e.firebaseapp.com",
+      databaseURL: "https://soccer-7898e-default-rtdb.firebaseio.com",
+      projectId: "soccer-7898e",
+      storageBucket: "soccer-7898e.appspot.com",
+      messagingSenderId: "722866530984",
+      appId: "1:722866530984:web:f6f85c290b63a5b190b09d",
+      measurementId: "G-Y2ZMGQHR5X"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
